[update to 2.7] refactored handling of reverse span set iterator for correctness
Aliaksey Kandratsenka (11):
      Implemented O(log n) searching among large spans
      refactored handling of reverse span set iterator for correctness
      implement more robust detection of sized delete support
      bumped version to 2.7rc
      unbreak printing large span stats
      Fix warning about one of CheckAddressBits functions unused
      Don't test OOM handling of debugallocator
      Correctly detect presence of various functions in tcmalloc.h
      unbreak compilation on GNU/Linux i386
      Really fix CheckAddressBits compilation warning
      bumped version to 2.7

Ben Dang (1):
      Update documentation for heap_checker.html

Christoph Müllner (3):
      Remove not needed header in vdso_support.cc.
      Fix signature of sbrk.
      linux: add aarch64_ilp32 support.

Fabrice Fontaine (1):
      Fix build without static libraries

HolyWu (4):
      Add tests for sized deallocation
      Enable aligned new/delete declarations on Windows when applicable
      Fix WIN32_OVERRIDE_ALLOCATORS for VS2017
      Clean up src/windows/config.h

Ishan Arora (1):
      typo in docs/tcmalloc.html

Mao (2):
      Explicitly prevent int overflow
      Enable tcmalloc VDSO support only on x86 to reduce static initializers

Todd Lipcon (2):
      Update docs for central page heap to reflect tree
      Add a central free list for kMaxPages-sized spans

Tulio Magno Quites Machado Filho (1):
      powerpc: Re-enable VDSO support

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,61 @@
+== 29 Apr 2018 ==
+gperftools 2.7 is out!
+
+Few people contributed minor, but important fixes since rc.
+
+Changes:
+
+* bug in span stats printing introduced by new scalable page heap
+  change was fixed.
+
+* Christoph Müllner has contributed couple warnings fixes and initial
+  support for aarch64_ilp32 architecture.
+
+* Ben Dang contributed documentation fix for heap checker.
+
+* Fabrice Fontaine contributed fixed for linking benchmarks with
+  --disable-static.
+
+* Holy Wu has added sized deallocation unit tests.
+
+* Holy Wu has enabled support of sized deallocation (c++14) on recent
+  MSVC.
+
+* Holy Wu has fixed MSVC build in WIN32_OVERRIDE_ALLOCATORS mode. This
+  closed issue #716.
+
+* Holy Wu has contributed cleanup of config.h used on windows.
+
+* Mao Huang has contributed couple simple tcmalloc changes from
+  chromium code base. Making our tcmalloc forks a tiny bit closer.
+
+* issue #946 that caused compilation failures on some Linux clang
+  installations has been fixed. Much thanks to github user htuch for
+  helping to diagnose issue and proposing a fix.
+
+* Tulio Magno Quites Machado Filho has contributed build-time fix for
+  PPC (for problem introduced in one of commits since RC).
+
+== 18 Mar 2018 ==
+gperftools 2.7rc is out!
+
+Changes:
+
+* Most notable change in this release is that very large allocations
+  (>1MiB) are now handled be O(log n) implementation. This is
+  contributed by Todd Lipcon based on earlier work by Aliaksei
+  Kandratsenka and James Golick. Special thanks to Alexey Serbin for
+  contributing OSX fix for that commit.
+
+* detection of sized deallocation support is improved. Which should
+  fix another set of issues building on OSX. Much thanks to Alexey
+  Serbin for reporting the issue, suggesting a fix and verifying it.
+
+* Todd Lipcon made a change to extend page heaps freelists to 1 MiB
+  (up from 1MiB - 8KiB). This may help a little for some workloads.
+
+* Ishan Arora contributed typo fix to docs
+
 == 9 Dec 2017 ==
 gperftools 2.6.3 is out!
 
