gperftools: Autospec creation for update from version 2.13 to version 2.14
Aliaksey Kandratsenka (17):
      work around tuple construction miscompilation on gcc 5
      force inline do_mmap_with_hooks
      avoid runtime initialization of null stacktrace implementation
      avoid unused variable warning in stacktrace_libunwind
      add cmake warning that our support is incomplete
      stacktrace_unittest: test all stacktrace capturing methods
      stacktrace_unittest: add simple way to skip ucontext testing
      [qnx] handle broken cfree and mallopt
      patch libtool.m4 for compiler_lib_search_path fix for qnx
      perform ucontext->pc variants testing in compile-time
      consolidate do_mallinfo{,2}
      test PREFER_LIBGCC_UNWINDER via defined()
      Revert "[osx] implement native c++ allocation operators on osx"
      construct malloc extension instances in static spaces
      avoid unused variable warning for TCMallocImplementation space
      add recently added getpc-inl.h to a set of headers to package
      bump version to 2.14

Julian Schroeder (1):
      [stacktrace_generic_fp] clear aarch64 pointer auth bits

Lennox Ho (6):
      Account for Windows while performing implicit TLS detection in CMakeLists.txt
      Also expose SetMemoryReleaseRate and GetMemoryReleaseRate as C shims
      Add the ability to disable TCMalloc replacement on Windows via environment variable TCMALLOC_DISABLE_REPLACEMENT=1
      Fix Windows CMake build by linking page_heap_test and mmap_hook_test to the entire library
      Add a more performant SpinLockDelay implementation for Windows based on WaitOnAddress and friends
      Fix C++ aligned allocation detected in the CMake build

Mateusz Jakub Fila (7):
      Add mallinfo2 function
      fixed setting pagesize and pageshift in cmake
      added missing gcc unwinder preference option in cmake
      added missing finding `HAVE___ATTRIBUTE__ALIGNED_FN` in cmake
      added missing finding asm/ptrace.h in cmake
      added

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,57 @@
+== 31 Dec 2023
+gperftools 2.14 is out!
+
+This release has the following set of notable changes:
+
+* Roman Geissler has contributed a fix to nasty initialization bug
+  introduced in 2.13 (see github issue #1452 for one example where it
+  fails).
+
+* spinlock delay support now has proper windows support. Instead of
+  simply sleeping, it uses WaitOnAddress (which is basically windows
+  equivalent of futexes). This improvement was contributed by Lennox
+  Ho.
+
+* we now have basic QNX support (basic malloc + heap checker)
+  championed by Xiang.Lin. Thanks! Do note, however, that QNX doesn't
+  provide SIGPROF ticks, so there will be no cpu profiler support on
+  this OS.
+
+* Yikai Zhao has contributed several fixes to important corner cases
+  of generic_fp stacktrace method.
+
+* several people have contributed various improvements to our cmake
+  build: Lennox Ho, Sergey Fedorov, Mateusz Jakub Fila. But do note
+  that cmake build is still incomplete and best-effort.
+
+* Julian Schroeder have fixed generic_fp incompatibility with ARM
+  pointer auth.
+
+* Mateusz Jakub Fila has contributed mallocinfo2 function (64-bit
+  version of mallinfo).
+
+* Lennox Ho has updated C malloc extension shims to include
+  {Set,Get}MemoryReleaseRate.
+
+* Lennox Ho has contributed to disable malloc functions patching on
+  windows when TCMALLOC_DISABLE_REPLACEMENT=1 environment variable is
+  set.
+
+* User poljak181 has contributed a fix to infinite recursion in some
+  cases of malloc hooks (or user-replaced operator new) and
+  MallocExtension::instance().
+
+* Sergey Fedorov has contributed a fix to use MAP_ANON on some older
+  OSes without MAP_ANONYMOUS.
+
+* the way we detect working ucontext->pc extraction method was
+  reworked and is now fully compile-time as opposed to
+  config-time. This means no more duplication and mismatches between
+  autoconf and cmake bits in this area.
+
+List of relevant tickets can be seen online at:
+https://github.com/gperftools/gperftools/issues?q=label%3Afixed-in-2.14+
+
 == 11 Sep 2023
 gperftools 2.13 is out!
 
