gperftools: Autospec creation for update from version 2.14 to version 2.15
Aliaksey Kandratsenka (5):
      correct NEWS entry about QNX (it supports heap profiler)
      few editorial fixes to NEWS for 2.14 release
      [cmake] explicitly link more libraries for threading
      move dynamic_annotations.cc under libsysinfo.la
      bump version to 2.15

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+== 5 Jan 2024
+gperftools 2.15 is out!
+
+This release has the following bug fixes:
+
+* Xiaowei Wang has pointed out the pthread linking issue on cmake on
+  older glibcs (where -pthread is not implicit). See
+  https://github.com/gperftools/gperftools/pull/1473 for more details.
+
+* Mikael Simberg and Tom "spot" Callaway have pointed out the missing
+  symbols issue when linking PPC or i386
+  builds. https://github.com/gperftools/gperftools/issues/1474 has all
+  the details.
+
+Huge thanks to all contributors!
+
 == 31 Dec 2023
 gperftools 2.14 is out!
 
@@ -12,7 +28,7 @@ This release has the following set of notable changes:
   equivalent of futexes). This improvement was contributed by Lennox
   Ho.
 
-* we now have basic QNX support (basic malloc + heap checker)
+* we now have basic QNX support (basic malloc + heap profiler)
   championed by Xiang.Lin. Thanks! Do note, however, that QNX doesn't
   provide SIGPROF ticks, so there will be no cpu profiler support on
   this OS.
@@ -27,15 +43,15 @@ This release has the following set of notable changes:
 * Julian Schroeder have fixed generic_fp incompatibility with ARM
   pointer auth.
 
-* Mateusz Jakub Fila has contributed mallocinfo2 function (64-bit
-  version of mallinfo).
+* Mateusz Jakub Fila has contributed implementation of mallocinfo2
+  function (64-bit version of mallinfo).
 
 * Lennox Ho has updated C malloc extension shims to include
   {Set,Get}MemoryReleaseRate.
 
-* Lennox Ho has contributed to disable malloc functions patching on
-  windows when TCMALLOC_DISABLE_REPLACEMENT=1 environment variable is
-  set.
+* Lennox Ho has contributed the ability to disable malloc functions
+  patching on windows when TCMALLOC_DISABLE_REPLACEMENT=1 environment
+  variable is set.
 
 * User poljak181 has contributed a fix to infinite recursion in some
   cases of malloc hooks (or user-replaced operator new) and
